--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 
 
 <script>
-  const PBI_URL = "https://app.powerbi.com/view?r=eyJrIjoiYmNkZThkZGUtOWMxMS00ZGI3LTgxNTktODFhMjAzNzYyNjZkIiwidCI6IjEzODQxZDVmLTk2OGQtNDYyNC1hN2RhLWQ2OGE2MDA2YTg0YSIsImMiOjR9";
+  const PBI_URL = "https://app.powerbi.com/view?r=eyJrIjoiOTQ0ZTUwZDEtYzFhYy00OTc0LWEwYzQtZjYxYjlhZmMwOWNiIiwidCI6IjEzODQxZDVmLTk2OGQtNDYyNC1hN2RhLWQ2OGE2MDA2YTg0YSIsImMiOjR9&pageName=3dfed1f920152409160a";
 
   const modal = document.getElementById('modal-dashboard');
   const container = document.getElementById('pbicontainer');
