--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
       <p class="text-sm text-gray-500">
         Los datos son un “snapshot” (no se actualizan automáticamente).
       </p>
-      <a href="https://app.powerbi.com/view?r=eyJrIjoiYmNkZThkZGUtOWMxMS00ZGI3LTgxNTktODFhMjAzNzYyNjZkIiwidCI6IjEzODQxZDVmLTk2OGQtNDYyNC1hN2RhLWQ2OGE2MDA2YTg0YSIsImMiOjR9"
+      <a href="https://app.powerbi.com/view?r=eyJrIjoiOTQ0ZTUwZDEtYzFhYy00OTc0LWEwYzQtZjYxYjlhZmMwOWNiIiwidCI6IjEzODQxZDVmLTk2OGQtNDYyNC1hN2RhLWQ2OGE2MDA2YTg0YSIsImMiOjR9&pageName=3dfed1f920152409160a"
          target="_blank" rel="noopener noreferrer"
          class="inline-flex items-center text-avocado-700 hover:text-avocado-900 font-medium">
         Abrir en pestaña nueva <i class="fas fa-external-link-alt ml-2"></i>
